# iCEclimber

./: README.md
Client/C-Client/Client/: CMakeLists.txt  json.c  main.c
Client/Java-Client/src/: module-info.java
Client/Java-Client/src/client/: SocketClient.java
Client/src/client/: SocketClient.java
Server/: .classpath
Server/src/: module-info.java
Server/src/Json/: ClientJsonReader.java  JsonTest.java  JsonUtil.java  coordinates.java
Server/src/Logic/: DataTypes.java  Game.java  LinkedList.java  Matrix.java  Player.java
Server/src/game/: IceClimberGame.java
Server/src/server/: ClientServiceThread.java  GlobalServerConstants.java  MultiThreadedSocketServer.java
TryGame/: CMakeLists.txt  json.c  main.c
